--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
             const password = document.getElementById('registerPassword').value;
 
             try {
-                const response = await fetch('http://localhost:8000/register', {
+                const response = await fetch('https://simple-node-email-verify.onrender.com/register', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -126,7 +126,7 @@
             const otp = document.getElementById('otp').value;
 
             try {
-                const response = await fetch('http://localhost:8000/verify-otp', {
+                const response = await fetch('https://simple-node-email-verify.onrender.com/verify-otp', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -149,7 +149,7 @@
             const password = document.getElementById('loginPassword').value;
 
             try {
-                const response = await fetch('http://localhost:8000/login', {
+                const response = await fetch('https://simple-node-email-verify.onrender.com/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
